k8s/server-deployment.yml
# Deployment Service Type allows for changing all aspects of the tgargeted Pods.
apiVersion: apps/v1
kind: Deployment
metadata:
   name: server-deployment
spec:
   #
   # We want 3 Pods running the multi-server Image.
   replicas: 3
   selector:
      # We specify the selector that the Deployment is going to use
      # to find these set of Pods that it is supposed to control.
      matchLabels:
         # component : piece of the application terminology
         component: server
   # Pods Template
   template:
      metadata:
         # labels specified here must at least match up with whatever we put inside
         # the spec. for the Deployment oitself (see: selector -> matchLabels).
         labels:
            component: server
      # Below we provide the spec. that is going to customize the exact behavior
      # of each of the Pods that gets created.
      spec:
         # We provide a list of Containers that this Pod is supposed to run.
         #
         # Here, we are only going to have one single Container inside of this Pod.
         # We do not have any other Containers that need to run along with the
         # multi-server Image.
         #
         # QUICK REMINDER:
         # The multi-sserver Image that we put together does expect
         # to get a handful of key-value pairs along with it (i.e. environment variables)
         # that tell the multi-sserver (i.e. the Express API) exactly how to connect
         # to our Postgres instance and the Redis instance as well.
         #
         # So, we need to make sure that these environemnt variables get injected
         # into that Container that is created with the given Image. And the
         # the entire goal of that is that we are going to tell the Express API,
         # how to connect to Postgres and Redis.
         #
         containers:
            - name: server
              image: gvellis/multi-server
              ports:
                 # We want to have a containerPort accessible of 5000.
                 - containerPort: 5000

              resources:
                 requests:
                    cpu: 100m
                    memory: 100Mi
                 limits:
                    cpu: 100m
                    memory: 100Mi
              # Just as before, we are going to eventually need to stuff in
              # some ENVIRONMENT_VARIABLES into this thing to tell it how to connect to the Redis and Postgres instances.
              # env pertains to Environment variables
